--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bomgificate": "^1.0.2",
     "nconfig": "0.0.6",
     "node-telegram-bot-api": "^0.30.0"
   }
